* bbe4da9 
|  2015-06-30 
|  Kostya Zolotarov 
|  New changelog formatting (HEAD, origin/development, origin/HEAD, development) 
|  
* 65affcb 
|  2015-06-30 
|  Kostya Zolotarov 
|  Implemented reading tasks command configuration settings from ~/.srcmod 
|  
* 556144a 
|  2015-06-30 
|  Kostya Zolotarov 
|  Implemented reading changelog command configuration settings from ~/.srcmod 
|  
* 4a998b6 
|  2015-06-30 
|  Kostya Zolotarov 
|  Implemented README chapter sequencing 
|  
* 7a1e09f 
|  2015-06-29 
|  Kostya Zolotarov 
|  Implemented settings loading for authors, build, files and version commands 
|  
* 57361f6 
|  2015-06-29 
|  Kostya Zolotarov 
|  Implemented settings loading for readme command 
|  
* 9b827ee 
|  2015-06-29 
|  Kostya Zolotarov 
|  Libraries install/uninstall fix 
|  
* 3546a92 
|  2015-06-29 
|  Kostya Zolotarov 
|  Implemented settings loading for uninstall command 
|  
* a2f50c5 
|  2015-06-29 
|  Kostya Zolotarov 
|  Moved templates to srcmod settings file 
|  
* beb9eee 
|  2015-06-29 
|  Kostya Zolotarov 
|  Install optimizations 
|  
* 0ddc5b7 
|  2015-06-27 
|  Kostya Zolotarov 
|  Added task to implement reading application variables from .srcmod configuration file 
|  
* b557bd1 
|  2015-06-26 
|  Kostya Zolotarov 
|  Added application configuration file 
|  
* 3d24eb7 
|  2015-06-23 
|  Kostya Zolotarov 
|  Added description; Added README chapter sequences task 
|  
* ff4d0a4 
|  2015-06-23 
|  Kostya Zolotarov 
|  Added FEATURES template 
|  
* f1c4ab4 
|  2015-06-19 
|  Kostya Zolotarov 
|  Included version command in the install 
|  
* b3bb4f4 
|  2015-06-19 
|  Kostya Zolotarov 
|  Implemented incremental versioning 
|  
* 8b32115 
|  2015-06-19 
|  Kostya Zolotarov 
|  Added version command file 
|  
* 07de32f 
|  2015-06-19 
|  Kostya Zolotarov 
|  Enabled library files uninstall 
|  
* 8d3f5d1 
|  2015-06-19 
|  Kostya Zolotarov 
|  Added readme command 
|  
* f9d7393 
|  2015-06-19 
|  Kostya Zolotarov 