@@ -1,7 +1,12 @@
+* 6af890e 
+|  2015-06-30 
+|  Kostya Zolotarov 
+|  Added chapter heading formatting type (HEAD, origin/development, origin/HEAD, development) 
+|  
 * bbe4da9 
 |  2015-06-30 
 |  Kostya Zolotarov 
-|  New changelog formatting (HEAD, origin/development, origin/HEAD, development) 
+|  New changelog formatting 
 |  
 * 65affcb 
 |  2015-06-30 
